--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -29,3 +29,12 @@ block body
 										i.fas.fa-camera
 									li
 										i.fas.fa-image
+	section.rotate-square
+		.container
+			.row
+				.col
+					.rotate-square-loader
+						.square.one
+						.square.two
+						.square.three
+						.square.four
