--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -143,3 +143,68 @@ body .mobile-style {
           body .mobile-style .mobile .screen nav ul li .fas, body .mobile-style .mobile .screen nav ul li .fab {
             transition: .5s all ease-in-out;
             transform: translateY(0px); }
+
+.rotate-square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; }
+  .rotate-square .rotate-square-loader {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    background: #000000;
+    box-sizing: border-box;
+    margin: 0 auto;
+    animation: rotate 1s linear infinite; }
+    .rotate-square .rotate-square-loader::before, .rotate-square .rotate-square-loader .square::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      right: 2px;
+      bottom: 2px;
+      background: #fff; }
+    .rotate-square .rotate-square-loader .square {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #000000;
+      animation: animate 1s linear infinite; }
+      .rotate-square .rotate-square-loader .square.one {
+        top: -100%;
+        left: -2px;
+        transform-origin: bottom right; }
+        .rotate-square .rotate-square-loader .square.one::before {
+          background: #1abc9c; }
+      .rotate-square .rotate-square-loader .square.two {
+        right: -100%;
+        top: -2px;
+        transform-origin: bottom left; }
+        .rotate-square .rotate-square-loader .square.two::before {
+          background: #2ecc71; }
+      .rotate-square .rotate-square-loader .square.three {
+        bottom: -100%;
+        left: 2px;
+        transform-origin: top left; }
+        .rotate-square .rotate-square-loader .square.three::before {
+          background: #3498db; }
+      .rotate-square .rotate-square-loader .square.four {
+        left: -100%;
+        top: 2px;
+        transform-origin: top right; }
+        .rotate-square .rotate-square-loader .square.four::before {
+          background: #9b59b6; }
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg); }
+  50%, 100% {
+    transform: rotate(180deg); } }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(90deg); }
+  50%, 100% {
+    transform: rotate(0deg); } }
