--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -38,3 +38,12 @@ block body
 						.square.two
 						.square.three
 						.square.four
+	section.layer-3d-image
+		.container
+			.row
+				.col
+					.layer-3d
+						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
+						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
+						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
+						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
