--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -208,3 +208,35 @@ body .mobile-style {
     transform: rotate(90deg); }
   50%, 100% {
     transform: rotate(0deg); } }
+
+section.layer-3d-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%; }
+  section.layer-3d-image .layer-3d {
+    width: 250px;
+    height: 480px;
+    position: relative;
+    margin-top: 150px;
+    margin: 0 auto;
+    transform: rotate(-30deg) skew(25deg);
+    transition: .5s all ease-in-out; }
+    section.layer-3d-image .layer-3d .image {
+      position: absolute;
+      max-width: 100%;
+      height: 100%;
+      transition: .5s all ease-in-out; }
+    section.layer-3d-image .layer-3d:hover .image:nth-child(4) {
+      transform: translate(160px, -160px);
+      opacity: 1; }
+    section.layer-3d-image .layer-3d:hover .image:nth-child(3) {
+      transform: translate(120px, -120px);
+      opacity: .8; }
+    section.layer-3d-image .layer-3d:hover .image:nth-child(2) {
+      transform: translate(80px, -80px);
+      opacity: .6; }
+    section.layer-3d-image .layer-3d:hover .image:nth-child(1) {
+      transform: translate(40px, -40px);
+      opacity: .4; }
