--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -47,3 +47,12 @@ block body
 						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
 						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
 						img.image.img-fluid(src="../img/bg.jpg", alt="background", srcset="")
+	section.scroll-down
+		.container
+			.row
+				.col
+					.indicator-animation
+						span
+						span
+						span
+						span
