--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -240,3 +240,46 @@ section.layer-3d-image {
     section.layer-3d-image .layer-3d:hover .image:nth-child(1) {
       transform: translate(40px, -40px);
       opacity: .4; }
+
+.scroll-down {
+  background: #000000;
+  height: 100vh;
+  position: relative; }
+  .scroll-down .container {
+    height: 100vh; }
+    .scroll-down .container .row {
+      height: 100vh; }
+      .scroll-down .container .row .col {
+        height: 100vh; }
+        .scroll-down .container .row .col .indicator-animation {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%); }
+          .scroll-down .container .row .col .indicator-animation span {
+            display: block;
+            width: 50px;
+            height: 50px;
+            border-bottom: 1px solid #ffffff;
+            border-right: 1px solid #ffffff;
+            transform: rotate(45deg);
+            margin: -10px;
+            animation: animate-rotate 2s infinite; }
+            .scroll-down .container .row .col .indicator-animation span:nth-child(1) {
+              animation-delay: .2s; }
+            .scroll-down .container .row .col .indicator-animation span:nth-child(2) {
+              animation-delay: .4s; }
+            .scroll-down .container .row .col .indicator-animation span:nth-child(3) {
+              animation-delay: .6s; }
+            .scroll-down .container .row .col .indicator-animation span:nth-child(4) {
+              animation-delay: .8s; }
+
+@keyframes animate-rotate {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px); }
+  50% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px); } }
