--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,3 +16,4 @@
 @import _pages/rotate-square
 @import _pages/layer-3d-image
 @import _pages/scroll-down-indicator-animation
+@import _pages/ring-loader
