--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -56,3 +56,9 @@ block body
 						span
 						span
 						span
+	section.ring-loader
+		.container
+			.row
+				.col
+					.ring Loading
+						span 
