--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -283,3 +283,77 @@ section.layer-3d-image {
   100% {
     opacity: 0;
     transform: rotate(45deg) translate(20px, 20px); } }
+
+.ring-loader {
+  background: #636e72;
+  height: 100vh;
+  position: relative; }
+  .ring-loader .container {
+    height: 100vh; }
+    .ring-loader .container .row {
+      height: 100vh; }
+      .ring-loader .container .row .col {
+        height: 100vh; }
+        .ring-loader .container .row .col .ring {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          height: 300px;
+          width: 300px;
+          background: transparent;
+          border: 3px solid #3c3c3c;
+          border-radius: 50%;
+          text-align: center;
+          line-height: 300px;
+          font-size: 30px;
+          color: #fff000;
+          letter-spacing: 10px;
+          text-transform: uppercase;
+          text-shadow: 0 0 10px #fff000;
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); }
+          .ring-loader .container .row .col .ring::before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0px;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            border: 3px solid transparent;
+            border-top: 3px solid #fff000;
+            border-right: 3px solid #fff000;
+            border-radius: 50%;
+            animation: animateCircle 2s linear infinite; }
+          .ring-loader .container .row .col .ring span {
+            display: block;
+            position: absolute;
+            top: calc( 50% - 2px);
+            left: 50%;
+            width: 50%;
+            height: 4px;
+            background: transparent;
+            transform-origin: left;
+            animation: animateDot 2s linear infinite; }
+            .ring-loader .container .row .col .ring span::before {
+              content: '';
+              position: absolute;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+              background: #fff000;
+              top: -6px;
+              right: -8px;
+              box-shadow: 0 0 20px #fff000; }
+
+@keyframes animateCircle {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+@keyframes animateDot {
+  0% {
+    transform: rotate(45deg); }
+  100% {
+    transform: rotate(405deg); } }
