--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,3 +17,4 @@
 @import _pages/layer-3d-image
 @import _pages/scroll-down-indicator-animation
 @import _pages/ring-loader
+@import _pages/product-image-slider
