--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -62,3 +62,20 @@ block body
 				.col
 					.ring Loading
 						span 
+	section.product-image-slider
+		.container
+			.row
+				.col
+					nav.product
+						ul
+							li
+								a.img-product(href="../img/img1.jpg" target="imgBox")
+									img(src="../img/thumb1.jpg", alt="")
+							li
+								a.img-product(href="../img/img2.jpg" target="imgBox")
+									img(src="../img/thumb2.jpg", alt="")
+							li
+								a.img-product(href="../img/img3.jpg" target="imgBox")
+									img(src="../img/thumb3.jpg", alt="")
+						.imgBox
+							img.image-box(src="../img/img1.jpg", alt="")
