--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -18,3 +18,4 @@
 @import _pages/scroll-down-indicator-animation
 @import _pages/ring-loader
 @import _pages/product-image-slider
+@import _pages/screen-overlay-navigation
