--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -79,3 +79,23 @@ block body
 									img(src="../img/thumb3.jpg", alt="")
 						.imgBox
 							img.image-box(src="../img/img1.jpg", alt="")
+	section.screen-overlay
+		.container-fluid
+			.row
+				.col
+					.toggle
+					.navigation
+						nav
+							ul
+								li
+									a(href="#" data-text="Home") Home
+								li
+									a(href="#" data-text="About") About
+								li
+									a(href="#" data-text="Services") Services
+								li
+									a(href="#" data-text="Team") Team
+								li
+									a(href="#" data-text="Profile") Profile
+								li
+									a(href="#" data-text="Contact") Contact
