--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,3 +19,4 @@
 @import _pages/ring-loader
 @import _pages/product-image-slider
 @import _pages/screen-overlay-navigation
+@import _pages/video-full-screen
