--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -99,3 +99,18 @@ block body
 									a(href="#" data-text="Profile") Profile
 								li
 									a(href="#" data-text="Contact") Contact
+	section.video-full-screen(data-vide-bg="./videos/videoFroBg")
+		.container
+			.row
+				.col
+					.login-form
+						form(action="#", method="get")
+							h2.header-content Sign In
+							.text-username
+								input(type="text" name="username" placeholder="Enter username")
+							.text-password
+								input(type="password" name="password" placeholder="Enter password")
+							.button-submit
+								button(type="submit") Logn In
+						.forget-password
+							a(href="#") Forget Password
