--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,3 +20,5 @@
 @import _pages/product-image-slider
 @import _pages/screen-overlay-navigation
 @import _pages/video-full-screen
+@import _pages/quote-box
+@import _pages/wrap-text-circle
