--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -114,3 +114,22 @@ block body
 								button(type="submit") Logn In
 						.forget-password
 							a(href="#") Forget Password
+	section.quote-box
+		.container
+			.row
+				.col
+					.box
+						i.fas.fa-quote-right.one
+						.text
+							i.fas.fa-quote-left.two
+							.text__content
+								h2 Quote of the Day
+								p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi facere veritatis ex delectus ea, non, exercitationem nisi eius aliquam numquam placeat odio hic cumque vel aperiam laudantium fugit blanditiis temporibus? 
+	section.wrap-text-circle
+		.container
+			.row
+				.col
+					.wrapper
+						.circle
+						h2 This is Wrap Text
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem!
