--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -133,3 +133,30 @@ block body
 						.circle
 						h2 This is Wrap Text
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem!
+	section.animating-perspective
+		.bg1
+		.bg2
+		.container
+			.row
+				.col
+					.left
+						h1 CrytoCurrensies
+						p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae tempore repellendus quo, accusantium molestiae alias omnis magni illum sed eius fuga vel perspiciatis modi quasi. Neque ratione eligendi atque vel.
+					.right
+						nav
+							ul
+								li
+									img(src="./img/appcoins.svg", alt="bitcoin icon")
+									span
+										strong AppCoins
+										p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								li
+									img(src="./img/aelf.svg", alt="bitcoin icon")
+									span
+										strong Aelfs
+										p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								li
+									img(src="./img/iota-1.svg", alt="bitcoin icon")
+									span
+										strong Iotas
+										p Lorem ipsum dolor sit amet consectetur adipisicing elit.
