--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -23,3 +23,4 @@
 @import _pages/quote-box
 @import _pages/wrap-text-circle
 @import _pages/animating-perspective
+@import _pages/sticky-section-scrolling
