--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -160,3 +160,10 @@ block body
 									span
 										strong Iotas
 										p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+	section.sticky-section-scrolling
+		.box-image
+		.box-image
+		.box-image
+		.box-image
+		.box-image
+
