--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -689,3 +689,28 @@ section.layer-3d-image {
         .animating-perspective .container .row .col .left p {
           color: #494949;
           line-height: 1.5em; }
+
+.sticky-section-scrolling {
+  position: relative;
+  width: 100%; }
+  .sticky-section-scrolling .box-image {
+    height: 100vh;
+    top: 0;
+    position: sticky;
+    width: 100%;
+    background: #000; }
+    .sticky-section-scrolling .box-image:nth-child(1) {
+      background: url("../img/sticky01.jpg");
+      background-size: cover; }
+    .sticky-section-scrolling .box-image:nth-child(2) {
+      background: url("../img/sticky02.jpg");
+      background-size: cover; }
+    .sticky-section-scrolling .box-image:nth-child(3) {
+      background: url("../img/sticky03.jpg");
+      background-size: cover; }
+    .sticky-section-scrolling .box-image:nth-child(4) {
+      background: url("../img/sticky04.jpg");
+      background-size: cover; }
+    .sticky-section-scrolling .box-image:nth-child(5) {
+      background: url("../img/sticky05.jpg");
+      background-size: cover; }
