--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -24,3 +24,4 @@
 @import _pages/wrap-text-circle
 @import _pages/animating-perspective
 @import _pages/sticky-section-scrolling
+@import _pages/tiltjs-hover-card
