--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -166,4 +166,16 @@ block body
 		.box-image
 		.box-image
 		.box-image
+	section.hover-card-tiltjs
+		.container
+			.row
+				.col-md-4
+					.card
+						.child
+				.col-md-4
+					.card
+						.child
+				.col-md-4
+					.card
+						.child
 
