update iphone6 layer

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -25,3 +25,4 @@
 @import _pages/animating-perspective
 @import _pages/sticky-section-scrolling
 @import _pages/tiltjs-hover-card
+@import _pages/iphone6
