--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -178,4 +178,19 @@ block body
 				.col-md-4
 					.card
 						.child
+	section.iphone6
+		.container
+			.row
+				.col
+					.mobile
+						.screen
+						.home
+						.inner
+						ul.volume
+							li
+							li
+						ul.silent
+							li 
+						ul.sleep
+							li 
 
