--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -193,4 +193,8 @@ block body
 							li 
 						ul.sleep
 							li 
-
+	section.reflection
+		.container
+			.row
+				.col
+					.text(data-text="Reflection") Reflection
