--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -868,3 +868,43 @@ section.layer-3d-image {
               margin: 10px 0;
               border-top-right-radius: 4px;
               border-bottom-right-radius: 4px; }
+
+.reflection {
+  height: 100vh;
+  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
+  font-family: sans-serif; }
+  .reflection .container {
+    height: 100vh; }
+    .reflection .container .row {
+      height: 100vh; }
+      .reflection .container .row .col {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .reflection .container .row .col .text {
+          position: relative;
+          text-transform: uppercase;
+          font-weight: bold;
+          font-size: 8rem;
+          color: white; }
+          .reflection .container .row .col .text::before {
+            position: absolute;
+            top: 91%;
+            left: 0;
+            content: attr(data-text);
+            display: block;
+            transform-origin: bottom;
+            transform: rotateX(180deg);
+            line-height: 0.5rem;
+            opacity: .8; }
+          .reflection .container .row .col .text::after {
+            position: absolute;
+            top: 70%;
+            left: 0;
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(0deg, #46aef7 0, transparent 80%);
+            color: transparent; }
