--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -908,3 +908,12 @@ section.layer-3d-image {
             height: 100%;
             background-image: linear-gradient(0deg, #46aef7 0, transparent 80%);
             color: transparent; }
+
+.move-background {
+  height: 1000px; }
+  .move-background .box {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: url("../img/sticky04.jpg") no-repeat center;
+    background-attachment: fixed; }
