--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -28,3 +28,4 @@
 @import _pages/iphone6
 @import _pages/reflection
 @import _pages/move-background-scroll
+@import _pages/glowing-gradient-ring-loader
