--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -200,4 +200,12 @@ block body
 					.text(data-text="Reflection") Reflection
 	section.move-background
 		.box
-
+	section.glowing-gradient-ring-loader
+		.container
+			.row
+				.col
+					.ring-loader
+						span
+						span
+						span
+						span
