--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -917,3 +917,53 @@ section.layer-3d-image {
     height: 100vh;
     background: url("../img/sticky04.jpg") no-repeat center;
     background-attachment: fixed; }
+
+.glowing-gradient-ring-loader {
+  height: 100vh;
+  background: #040229; }
+  .glowing-gradient-ring-loader .container {
+    height: 100%; }
+    .glowing-gradient-ring-loader .container .row {
+      height: 100%; }
+      .glowing-gradient-ring-loader .container .row .col {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .glowing-gradient-ring-loader .container .row .col .ring-loader {
+          position: relative;
+          width: 300px;
+          height: 300px;
+          border-radius: 50%;
+          background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+          animation: glowing-animate .5s linear infinite; }
+          .glowing-gradient-ring-loader .container .row .col .ring-loader span {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0); }
+            .glowing-gradient-ring-loader .container .row .col .ring-loader span:nth-child(1) {
+              filter: blur(5px); }
+            .glowing-gradient-ring-loader .container .row .col .ring-loader span:nth-child(2) {
+              filter: blur(10px); }
+            .glowing-gradient-ring-loader .container .row .col .ring-loader span:nth-child(3) {
+              filter: blur(25px); }
+            .glowing-gradient-ring-loader .container .row .col .ring-loader span:nth-child(4) {
+              filter: blur(50px); }
+          .glowing-gradient-ring-loader .container .row .col .ring-loader::after {
+            position: absolute;
+            content: '';
+            display: block;
+            top: 30px;
+            left: 30px;
+            right: 30px;
+            bottom: 30px;
+            background: #040229;
+            border-radius: 50%; }
+
+@keyframes glowing-animate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
