--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -29,3 +29,4 @@
 @import _pages/reflection
 @import _pages/move-background-scroll
 @import _pages/glowing-gradient-ring-loader
+@import _pages/animate-wave
