--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -30,3 +30,4 @@
 @import _pages/move-background-scroll
 @import _pages/glowing-gradient-ring-loader
 @import _pages/animate-wave
+@import _pages/blur-glass-transparent
