--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -211,4 +211,10 @@ block body
 						span
 	section.animated-wave
 		.wave
-
+	section.blur-glass-transparent
+		.container
+			.row
+				.col
+					.box
+						h1 This is header
+						p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, voluptatibus dicta fuga sint totam voluptate? Temporibus corrupti vel, quasi modi quo eligendi saepe labore ab alias. Ut facilis necessitatibus nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odio animi tempora, corrupti neque incidunt nobis ad tempore quos esse? Accusamus vitae veniam sint nemo explicabo voluptatibus nobis consectetur nesciunt.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, voluptatibus dicta fuga sint totam voluptate? Temporibus corrupti vel, quasi modi quo eligendi saepe labore ab alias. Ut facilis necessitatibus nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odio animi tempora, corrupti neque incidunt nobis ad tempore quos esse? Accusamus vitae veniam sint nemo explicabo voluptatibus nobis consectetur nesciunt.
