--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1018,3 +1018,39 @@ section.layer-3d-image {
     background-position: 1360px; }
   100% {
     background-position: 0; } }
+
+.blur-glass-transparent {
+  height: 100vh;
+  background: url("../img/bg.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed; }
+  .blur-glass-transparent .container {
+    height: 100%; }
+    .blur-glass-transparent .container .row {
+      height: 100%; }
+      .blur-glass-transparent .container .row .col {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .blur-glass-transparent .container .row .col .box {
+          width: 50%;
+          padding: 50px;
+          color: white;
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+          overflow: hidden;
+          position: relative;
+          z-index: 2; }
+          .blur-glass-transparent .container .row .col .box::before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: -20px;
+            right: -20px;
+            left: -20px;
+            bottom: -20px;
+            background: url("../img/bg.jpg") no-repeat center;
+            background-size: cover;
+            background-attachment: fixed;
+            z-index: -1;
+            filter: blur(2px); }
