--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1054,3 +1054,27 @@ section.layer-3d-image {
             background-attachment: fixed;
             z-index: -1;
             filter: blur(2px); }
+
+.knockout-text {
+  background: url("../img/bg.jpg");
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .knockout-text h1 {
+    position: relative;
+    padding: 40px 0 40px 0;
+    max-width: 1200px;
+    font-size: 16em;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: .6em;
+    color: #000;
+    background: #fff;
+    mix-blend-mode: screen; }
+    .knockout-text h1 span {
+      font-size: .5em;
+      margin: 0 10px; }
