--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -31,3 +31,4 @@
 @import _pages/glowing-gradient-ring-loader
 @import _pages/animate-wave
 @import _pages/blur-glass-transparent
+@import _pages/knockout-text
