--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -223,3 +223,19 @@ block body
 			span Your
 			span Text
 			span Here....
+	section.text-typing-animation
+		.container
+			.row
+				.col
+					.type(data-splitting="words")
+						h2 This is typing text using Splitting.js
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt laudantium magni cumque ut iure consequatur, voluptatibus doloremque, qui ad, nisi accusamus asperiores illum dolorum magnam? Soluta molestias aliquam iusto.
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur error vero nihil illo, labore eum quas quo aspernatur deleniti harum hic nobis quidem fuga debitis molestias dicta ratione et.
+	section.text-typing-animation2
+		.container
+			.row
+				.col
+					.type(data-splitting="words")
+						h2 This is typing text using Splitting.js
+						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt laudantium magni cumque ut iure consequatur, voluptatibus doloremque, qui ad, nisi accusamus asperiores illum dolorum magnam? Soluta molestias aliquam iusto.
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur error vero nihil illo, labore eum quas quo aspernatur deleniti harum hic nobis quidem fuga debitis molestias dicta ratione et.
