--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -239,3 +239,15 @@ block body
 						h2 This is typing text using Splitting.js
 						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt laudantium magni cumque ut iure consequatur, voluptatibus doloremque, qui ad, nisi accusamus asperiores illum dolorum magnam? Soluta molestias aliquam iusto.
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur error vero nihil illo, labore eum quas quo aspernatur deleniti harum hic nobis quidem fuga debitis molestias dicta ratione et.
+	section.card-hover-toggle-button
+		.container
+			.row
+				.col
+					.card
+						input(type="checkbox", name="")
+						.toggle + 
+						.img-box
+							img(src="../img/sticky02.jpg", alt="", srcset="")
+						.content
+							h2 Someone is famous
+							p Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eius quas molestiae optio veritatis, deleniti possimus voluptatibus, aliquam iusto tempora est commodi eos facilis, ducimus magnam facere! Illo, ullam consectetur.
