--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1127,3 +1127,62 @@ section.layer-3d-image {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
+.card-hover-toggle-button {
+  height: 100vh;
+  background-color: black; }
+  .card-hover-toggle-button .container {
+    height: 100%; }
+    .card-hover-toggle-button .container .row {
+      height: 100%; }
+      .card-hover-toggle-button .container .row .col {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .card-hover-toggle-button .container .row .col .card {
+          position: relative;
+          width: 300px;
+          height: 400px;
+          background: #262626;
+          overflow: hidden; }
+          .card-hover-toggle-button .container .row .col .card input, .card-hover-toggle-button .container .row .col .card .toggle {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            bottom: 20px;
+            right: 20px;
+            outline: none;
+            z-index: 10; }
+          .card-hover-toggle-button .container .row .col .card input {
+            opacity: 0; }
+          .card-hover-toggle-button .container .row .col .card .toggle {
+            pointer-events: none;
+            border-radius: 50%;
+            background: #fff;
+            text-align: center;
+            transition: .5s all ease-in-out;
+            line-height: 42px;
+            font-size: 40px;
+            box-shadow: 0 0 0 0 #9c27b0; }
+          .card-hover-toggle-button .container .row .col .card input:checked ~ .toggle {
+            box-shadow: 0 0 0 500px #9c27b0;
+            transform: rotate(225deg); }
+          .card-hover-toggle-button .container .row .col .card .img-box, .card-hover-toggle-button .container .row .col .card .content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%; }
+          .card-hover-toggle-button .container .row .col .card .content {
+            padding: 20px;
+            box-sizing: border-box;
+            z-index: 11;
+            pointer-events: none;
+            transition: .5s all ease-in-out;
+            opacity: 0;
+            color: white;
+            transition-delay: .5s; }
+          .card-hover-toggle-button .container .row .col .card input:checked ~ .content {
+            opacity: 1;
+            transition: .5s all ease-in-out; }
