--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -33,3 +33,4 @@
 @import _pages/blur-glass-transparent
 @import _pages/knockout-text
 @import _pages/text-typing
+@import _pages/card-effect-toggle-button
