--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1186,3 +1186,47 @@ section.layer-3d-image {
           .card-hover-toggle-button .container .row .col .card input:checked ~ .content {
             opacity: 1;
             transition: .5s all ease-in-out; }
+
+.glowing-gradient-border {
+  height: 100vh;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1; }
+  .glowing-gradient-border .card {
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #060c21;
+    color: white; }
+    .glowing-gradient-border .card .content {
+      padding: 20px;
+      box-sizing: border-box; }
+    .glowing-gradient-border .card::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      background: #ffffff;
+      z-index: -1; }
+    .glowing-gradient-border .card::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      background: #ffffff;
+      z-index: -2;
+      filter: blur(40px); }
+    .glowing-gradient-border .card::before, .glowing-gradient-border .card::after {
+      background: linear-gradient(235deg, #89ff00, #060c21, #00bcd4); }
