--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -34,3 +34,4 @@
 @import _pages/knockout-text
 @import _pages/text-typing
 @import _pages/card-effect-toggle-button
+@import _pages/glowing-border-grandient
