--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -251,3 +251,8 @@ block body
 						.content
 							h2 Someone is famous
 							p Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eius quas molestiae optio veritatis, deleniti possimus voluptatibus, aliquam iusto tempora est commodi eos facilis, ducimus magnam facere! Illo, ullam consectetur.
+	section.glowing-gradient-border
+		.card
+			.content
+				h2 This is content
+				p Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus quibusdam ea rem, quia iste nostrum enim deserunt, doloremque ut qui veritatis consequatur natus neque odio architecto. Suscipit, veniam perspiciatis?
