--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -35,3 +35,4 @@
 @import _pages/text-typing
 @import _pages/card-effect-toggle-button
 @import _pages/glowing-border-grandient
+@import _pages/hover-button-effect
