--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -256,3 +256,10 @@ block body
 			.content
 				h2 This is content
 				p Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus quibusdam ea rem, quia iste nostrum enim deserunt, doloremque ut qui veritatis consequatur natus neque odio architecto. Suscipit, veniam perspiciatis?
+	section.hover-button-effect
+		a(href="#").button-fake
+			span
+			span
+			span
+			span
+			| Button
