--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1230,3 +1230,92 @@ section.layer-3d-image {
       filter: blur(40px); }
     .glowing-gradient-border .card::before, .glowing-gradient-border .card::after {
       background: linear-gradient(235deg, #89ff00, #060c21, #00bcd4); }
+
+.hover-button-effect {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background: #0c002b; }
+  .hover-button-effect .button-fake {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #1670f0;
+    padding: 30px 60px;
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+    overflow: hidden; }
+    .hover-button-effect .button-fake::before {
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      bottom: 2px;
+      width: 50%;
+      background: rgba(255, 255, 255, 0.05); }
+    .hover-button-effect .button-fake span {
+      position: absolute; }
+      .hover-button-effect .button-fake span:nth-child(1) {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: linear-gradient(to right, #0c002b, #1779ff, #0c002b);
+        animation: hover-button1 2s linear infinite;
+        animation-play-state: paused; }
+      .hover-button-effect .button-fake span:nth-child(2) {
+        top: 0;
+        left: 0;
+        width: 1px;
+        height: 100%;
+        background: linear-gradient(to top, #0c002b, #1779ff, #0c002b);
+        animation: hover-button2 2s linear infinite;
+        animation-play-state: paused; }
+      .hover-button-effect .button-fake span:nth-child(3) {
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: linear-gradient(to left, #0c002b, #1779ff, #0c002b);
+        animation: hover-button3 2s linear infinite;
+        animation-play-state: paused; }
+      .hover-button-effect .button-fake span:nth-child(4) {
+        top: 0;
+        right: 0;
+        width: 1px;
+        height: 100%;
+        background: linear-gradient(to bottom, #0c002b, #1779ff, #0c002b);
+        animation: hover-button4 2s linear infinite;
+        animation-play-state: paused; }
+    .hover-button-effect .button-fake:hover span {
+      animation-play-state: running; }
+
+@keyframes hover-button1 {
+  0% {
+    transform: translateX(-100%); }
+  100% {
+    transform: translateX(100%); } }
+
+@keyframes hover-button2 {
+  0% {
+    transform: translateY(100%); }
+  100% {
+    transform: translateY(-100%); } }
+
+@keyframes hover-button3 {
+  0% {
+    transform: translateX(100%); }
+  100% {
+    transform: translateX(-100%); } }
+
+@keyframes hover-button4 {
+  0% {
+    transform: translateY(-100%); }
+  100% {
+    transform: translateY(100%); } }
