--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -36,3 +36,4 @@
 @import _pages/card-effect-toggle-button
 @import _pages/glowing-border-grandient
 @import _pages/hover-button-effect
+@import _pages/nike-design
