--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -263,3 +263,17 @@ block body
 			span
 			span
 			| Button
+	section.nike-design
+		.container
+			.row
+				.col
+					.img-box
+						img(src="../img/nike.png", alt="", srcset="")
+					.details
+						.content
+							h2 Nike Air Max 270 
+								br
+								span Running Collection
+							p Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur 
+							h3 $150.99
+							button Buy Now
