--- a/.dist/css/main.css
+++ b/.dist/css/main.css
@@ -1319,3 +1319,109 @@ section.layer-3d-image {
     transform: translateY(-100%); }
   100% {
     transform: translateY(100%); } }
+
+.nike-design {
+  background: #070c24;
+  min-height: 100vh; }
+  .nike-design .container {
+    height: 100%; }
+    .nike-design .container .row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%; }
+      .nike-design .container .row .col {
+        position: relative;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 900px;
+        height: 600px;
+        background: #fff;
+        margin: 20px;
+        padding: 0; }
+        .nike-design .container .row .col .img-box {
+          width: 30%;
+          height: 100%;
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: #066dbc; }
+          .nike-design .container .row .col .img-box img {
+            position: relative;
+            transform: rotate(-35deg);
+            width: 200%; }
+          .nike-design .container .row .col .img-box::before {
+            content: 'Nike';
+            display: block;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-weight: 800;
+            opacity: .1;
+            color: #000000;
+            font-size: 8em; }
+        .nike-design .container .row .col .details {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 70%;
+          height: 100%;
+          box-sizing: border-box;
+          padding: 40px; }
+          .nike-design .container .row .col .details .content h2 {
+            margin: 0 0 5px 0;
+            padding: 0;
+            font-size: 2.5em;
+            line-height: .8em;
+            color: #444; }
+            .nike-design .container .row .col .details .content h2 span {
+              font-size: 0.4em;
+              text-transform: uppercase;
+              letter-spacing: 2px;
+              color: #999; }
+          .nike-design .container .row .col .details .content p {
+            max-width: 90%;
+            margin-left: 10%; }
+          .nike-design .container .row .col .details .content h3 {
+            margin: 0;
+            padding: 0;
+            font-size: 2.5em;
+            color: #a2a2a2;
+            float: left; }
+          .nike-design .container .row .col .details .content button {
+            background: #006dbc;
+            color: #fff;
+            border: none;
+            outline: none;
+            box-shadow: none;
+            padding: 15px 20px;
+            margin-top: 5px;
+            font-size: 16px;
+            letter-spacing: 1px;
+            border-radius: 40px;
+            font-weight: bold;
+            float: right;
+            cursor: pointer; }
+  @media screen and (max-width: 1080px) {
+    .nike-design .container {
+      height: auto; }
+      .nike-design .container .img-box {
+        padding: 40px;
+        box-sizing: border-box;
+        width: 100% !important;
+        height: auto;
+        overflow: hidden;
+        text-align: center; }
+        .nike-design .container .img-box img {
+          transform: rotate(0deg) !important;
+          max-width: 100%; }
+      .nike-design .container .details {
+        width: 100% !important;
+        height: auto;
+        padding: 20px; }
+        .nike-design .container .details .content p {
+          max-width: 100% !important;
+          margin-left: 0 !important; } }
